--- a/아침고요펜션 연습.html
+++ b/아침고요펜션 연습.html
@@ -14,7 +14,9 @@
         <header>
             <h1><a href="#"><img src="images/logo.jpg" alt="로고"></a></h1>
             <ul>
-                <li><a href="#">펜션소개</a></li>
+                <li>
+                    <a href="#">펜션소개</a>
+                </li>
                 <li><a href="#">룸 미리보기</a>
                     <nav>
                         <a href="#">사랑 하나</a>
@@ -27,7 +29,7 @@
                     <nav>
                         <a href="#">예약하기</a>
                         <a href="#">문의하기</a>
-                        <a href="#">갤러리</a>
+                        <a href="#" class="last">갤러리</a>
                     </nav>                
                 </li>     
             </ul>
@@ -41,14 +43,23 @@
                     <img src="images/slide3.jpg" alt="펜션전경3">
                 </div>
         </section>
+         <!--공지 팝업 : 시작-->
+         <section id="popup">
+            <h3>방문자 후기</h3>
+            <p>아기랑 남편이랑 진짜 잘 쉬다 왔어요!!</p>
+            <button type="button">닫기</button>
+        </section>
+
+        <!--공지 팝업 : 끝-->
         <main>
             <section id="notice">
-                <h2>공지사항</h2>
+                <h2>방문자 후기</h2>
                     <ul>
                         <li>
-                            <a href="#">진짜 아기랑 남편이랑 잘 쉬다 왔어요!!</a>
+                            <a href="#">아기랑 남편이랑 진짜 잘 쉬다 왔어요!!</a>
                             <span>2018-03-25</span>
                         </li>
+                        
                         <li>
                             <a href="#">엄청 만족합니다~</a>
                             <span>2018-02-13</span>
@@ -71,22 +82,22 @@
                         </li>                       
                     </ul>
             </section>
-            <section>
+            <section id="partner">
                 <h2>협력사 콘텐츠</h2>
-                    <a href="#"><img src="images/partner.jpg" alt="협력사"></a>
+                    <a href="#" id="test"><img src="images/partner.jpg" alt="협력사"></a>
                     <div>
                         <section>
                             <h3>사계절 바베큐장<br>쿸tv& 와이파이</h3>
                         </section>
                         <ul>
-                            <li><a href="#">남이섬 집라인</a></li>
+                            <li><a href="#">남이섬 집 라인</a></li>
                             <li><a href="#">쁘띠 프랑스</a></li>
                             <li><a href="#">자라섬 재즈페스티벌</a></li>
                             <li><a href="#">가평 사계절 썰매장</a></li>
                         </ul>
                     </div>
             </section>
-            <section>
+            <section id="banner">
                 <h2>배너</h2>
                     <div>
                         <a href="#"><img src="images/icon1.png" alt="펜션알림판"></a>
