--- a/demo.html
+++ b/demo.html
@@ -61,15 +61,9 @@
 					thumb_links				:	1,			// Individual thumb links for each slide
 					thumbnail_navigation    :   0,			// Thumbnail navigation
 					slides 					:  	[			// Slideshow Images
-														{image : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/slides/kazvan-1.jpg', title : 'Image Credit: Maria Kazvan', thumb : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/thumbs/kazvan-1.jpg', url : 'http://www.nonsensesociety.com/2011/04/maria-kazvan/'},
-														{image : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/slides/kazvan-2.jpg', title : 'Image Credit: Maria Kazvan', thumb : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/thumbs/kazvan-2.jpg', url : 'http://www.nonsensesociety.com/2011/04/maria-kazvan/'},  
-														{image : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/slides/kazvan-3.jpg', title : 'Image Credit: Maria Kazvan', thumb : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/thumbs/kazvan-3.jpg', url : 'http://www.nonsensesociety.com/2011/04/maria-kazvan/'},
-														{image : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/slides/wojno-1.jpg', title : 'Image Credit: Colin Wojno', thumb : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/thumbs/wojno-1.jpg', url : 'http://www.nonsensesociety.com/2011/03/colin/'},
-														{image : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/slides/wojno-2.jpg', title : 'Image Credit: Colin Wojno', thumb : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/thumbs/wojno-2.jpg', url : 'http://www.nonsensesociety.com/2011/03/colin/'},
-														{image : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/slides/wojno-3.jpg', title : 'Image Credit: Colin Wojno', thumb : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/thumbs/wojno-3.jpg', url : 'http://www.nonsensesociety.com/2011/03/colin/'},
-														{image : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/slides/shaden-1.jpg', title : 'Image Credit: Brooke Shaden', thumb : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/thumbs/shaden-1.jpg', url : 'http://www.nonsensesociety.com/2011/06/brooke-shaden/'},
-														{image : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/slides/shaden-2.jpg', title : 'Image Credit: Brooke Shaden', thumb : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/thumbs/shaden-2.jpg', url : 'http://www.nonsensesociety.com/2011/06/brooke-shaden/'},
-														{image : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/slides/shaden-3.jpg', title : 'Image Credit: Brooke Shaden', thumb : 'http://buildinternet.s3.amazonaws.com/projects/supersized/3.2/thumbs/shaden-3.jpg', url : 'http://www.nonsensesociety.com/2011/06/brooke-shaden/'}
+														{image : 'images/visual1.jpg', title : '#', thumb : '#', url : '#'},
+														{image : 'images/visual2.jpg', title : '#', thumb : '#', url : '#'},  
+														{image : 'images/visual3.jpg', title : '#', thumb : '#', url : '#'}														
 												],
 												
 					// Theme Options			   
@@ -85,7 +79,7 @@
 	
 	<style type="text/css">
 		ul#demo-block{ margin:0 15px 15px 15px; }
-			ul#demo-block li{ margin:0 0 10px 0; padding:10px; display:inline; float:left; clear:both; color:#aaa; background:url('img/bg-black.png'); font:11px Helvetica, Arial, sans-serif; }
+			ul#demo-block li{ margin:0 0 10px 0; padding:20px; display:inline; float:left; clear:both; color:#aaa; /*background:url('img/bg-black.png');*/ font:11px Helvetica, Arial, sans-serif; }
 			ul#demo-block li a{ color:#eee; font-weight:bold; }
 	</style>
 
@@ -93,47 +87,47 @@
 
 	<!--Demo styles (you can delete this block)-->
 	
-	<ul id="demo-block">
+	<!--<ul id="demo-block">
 		<li><a href="http://buildinternet.com/project/supersized/" target="_blank"><img src="img/supersized-logo.png"/></a></li>
 		<li>Photographers: <a href="http://cargocollective.com/mariakazvan" target="_blank">Maria Kazvan</a>, <a href="http://colindub.com" target="_blank">Colin Wojno</a>, &amp; <a href="http://brookeshaden.com/" target="_blank">Brooke Shaden</a></li>
-	</ul>
+	</ul>-->
 	
 	<!--End of styles-->
 
 	<!--Thumbnail Navigation-->
-	<div id="prevthumb"></div>
-	<div id="nextthumb"></div>
+	<!--<div id="prevthumb"></div>
+	<div id="nextthumb"></div>-->
 	
 	<!--Arrow Navigation-->
 	<a id="prevslide" class="load-item"></a>
 	<a id="nextslide" class="load-item"></a>
 	
-	<div id="thumb-tray" class="load-item">
+	<!--<div id="thumb-tray" class="load-item">
 		<div id="thumb-back"></div>
 		<div id="thumb-forward"></div>
-	</div>
+	</div>-->
 	
-	<!--Time Bar-->
+	<!--Time Bar
 	<div id="progress-back" class="load-item">
 		<div id="progress-bar"></div>
-	</div>
+	</div>-->
 	
 	<!--Control Bar-->
 	<div id="controls-wrapper" class="load-item">
 		<div id="controls">
 			
-			<a id="play-button"><img id="pauseplay" src="img/pause.png"/></a>
+			<!--<a id="play-button"><img id="pauseplay" src="img/pause.png"/></a>-->
 		
 			<!--Slide counter-->
-			<div id="slidecounter">
+			<!--<div id="slidecounter">
 				<span class="slidenumber"></span> / <span class="totalslides"></span>
 			</div>
 			
-			<!--Slide captions displayed here-->
-			<div id="slidecaption"></div>
+			<!--Slide captions displayed here
+			<div id="slidecaption"></div>-->
 			
-			<!--Thumb Tray button-->
-			<a id="tray-button"><img id="tray-arrow" src="img/button-tray-up.png"/></a>
+			<!--Thumb Tray button
+			<a id="tray-button"><img id="tray-arrow" src="img/button-tray-up.png"/></a>-->
 			
 			<!--Navigation-->
 			<ul id="slide-list"></ul>
